--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -15,3 +15,12 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./database
+  cache:
+    image: redis:6.2-alpine
+    container_name: redis
+    restart: always
+    ports:
+      # TODO: add ports to env vars
+      - "6379:6379"
+    volumes:
+      - ./cache:/data
